syntax = "proto3";

package protocol;

import "proto/status.proto";

option go_package = "protocol;protocol";

message Config
{
    Status status = 1;
    map<int64,string> tags = 2;
    map<int64,string> difficulty = 3;
}

message UserRole
{
    Status status = 1;
    map<int64,string> role = 2;
}

message JudgeLanguage
{
    Status status = 1;
    map<int64,string> language = 2;
}

message JudgeResults
{
    Status status = 1;
    map<int64,string> judge_results = 2;
}

// PaperCompose 组卷算法
message PaperComposeAlgorithm
{
    Status status = 1;
    map<int64,string> algorithm = 2;
}